fix typo on approach page

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -130,7 +130,7 @@
                                         international music
                                         festivals and competitions and applying for admission to music degree programs at major
                                         conservatories and
-                                        Universities. Admission into this course is subject to Dr. Finlay's approval, and the curriculum
+                                        universities. Admission into this course is subject to Dr. Finlay's approval, and the curriculum
                                         varies
                                         depending on the goals of the individual student.
                                     </p>
